--- a/_pages/genuss/index.html
+++ b/_pages/genuss/index.html
@@ -20,10 +20,10 @@ sections:
     title: Käse
 
   - id: three
-    title: Wein
+    title: Meeresfrüchte & Fleisch
 
   - id: four
-    title: Meeresfrüchte & Fleisch
+    title: Wein
 
   - id: five
     title: Honig & Süßspeisen
@@ -43,6 +43,6 @@ sections:
 
 {% include nav/page.html content=page.sections %}
 
-{% include page/gallery.html %}
+{% include page/content.html %}
 
 {% include modal/sections.html %}
