--- a/_pages/index.html
+++ b/_pages/index.html
@@ -3,7 +3,7 @@ layout: default
 id: overview
 nav: true
 nav-order: 1
-title: Ihre außergewöhnliche Geschichte
+title: Griechenland - Ein Kosmos voller Sehnsuchtsorte
 
 banner:
   title: Griechenland
