--- a/_pages/angebote/index.html
+++ b/_pages/angebote/index.html
@@ -6,7 +6,7 @@ nav-order: 6
 title: Angebote
 
 banner:
-  title: Abu Dhabi
-  title-sub: Schreiben Sie Ihre außergewöhnliche Geschichte
+  title: ANGEBOTE
+  title-sub:
 
 ---
