--- a/_pages/unentdeckt/index.html
+++ b/_pages/unentdeckt/index.html
@@ -43,6 +43,6 @@ sections:
 
 {% include nav/page.html content=page.sections %}
 
-{% include page/gallery.html %}
+{% include page/content.html %}
 
 {% include modal/sections.html %}
