--- a/_pages/index.html
+++ b/_pages/index.html
@@ -16,9 +16,9 @@ intro: "Malerische Inselwelten, antike Kulturschätze, pittoreske Tavernen – d
 
 
 
-<div class=" vpad--xl bg bg--g-blue " style=" ">
+<div class=" vpad--xl bv-parallax bv-shadow-inset" style="background-image: url('{{site.img}}/content/{{page.id}}/bg-intro.jpg');">
   <div class="container">
-    <div class="width width--xl text--center text--xxl text--white">
+    <div class="width width--xl text--center text--normal text--xxl text--white" >
       <p>{{page.intro}}</p>
     </div>
   </div>
@@ -40,7 +40,7 @@ intro: "Malerische Inselwelten, antike Kulturschätze, pittoreske Tavernen – d
       <a href="{{site.baseurl}}{{destination.url}}" id="tracking-nikon-{{feature.id}}-image" class="bg-img bg-img--4-3" style="background-image: url('{{site.img}}/content/{{destination.id}}/hero.jpg');" ></a>
     </div>
     <div class="bob__text">
-      <h3 class="title title--lg text--bolder ">{{destination.title}}</h3>
+      <h3 class="sub-title sub-title--lg ">{{destination.title}}</h3>
       <p class="text--md">{{destination.intro}}</p>
       <div class="space--lg"></div>
       <a href="{{site.baseurl}}{{destination.url}}"  class="btn btn--g-blue" >Jetzt entdecken</a>
@@ -55,7 +55,7 @@ intro: "Malerische Inselwelten, antike Kulturschätze, pittoreske Tavernen – d
 
 
 
-<div class=" vpad--xl abu-parallax--lighter" style="background-image:url('{{site.img}}/content/bg-img/bg-img11.jpg'); ">
+<div class=" vpad--xl bg--light" >
   <div class="container text--center">
 
     <div class="core-title core-title--xl">Angebote</div>
