--- a/_pages/index.html
+++ b/_pages/index.html
@@ -16,7 +16,7 @@ intro: "Malerische Inselwelten, antike Kulturschätze, pittoreske Tavernen – d
 
 
 
-<div class=" vpad--xl bv-parallax bv-shadow-inset" style="background-image: url('{{site.img}}/content/{{page.id}}/bg-intro.jpg');">
+<div class=" vpad--xxl bv-parallax bv-shadow-inset" style="background-image: url('{{site.img}}/content/{{page.id}}/bg-intro.jpg');">
   <div class="container">
     <div class="width width--xl text--center text--normal text--xxl text--white" >
       <p>{{page.intro}}</p>
@@ -55,10 +55,10 @@ intro: "Malerische Inselwelten, antike Kulturschätze, pittoreske Tavernen – d
 
 
 
-<div class=" vpad--xl bg--light" >
+<div class=" vpad--xl " style="background-image: url('{{site.img}}/content/{{page.id}}/bg-tile.png'); background-size: 25%;" >
   <div class="container text--center">
 
-    <div class="core-title core-title--xl">Angebote</div>
+    <div class="sub-title sub-title--xl">Angebote</div>
 
   </div>
   {% include offer/all-offers.html %}
