--- a/_pages/straende/index.html
+++ b/_pages/straende/index.html
@@ -31,9 +31,10 @@ sections:
 ---
 
 
-<div class=" vpad--xl " >
+
+<div class=" vpad--xxl bv-parallax bv-shadow-inset" style="background-image: url('{{site.img}}/content/{{page.id}}/bg-intro.jpg');">
   <div class="container">
-    <div class="width width--xl text--center text--xxl">
+    <div class="width width--xl text--center text--normal text--xxl text--white" >
       <p>{{page.intro}}</p>
     </div>
   </div>
