--- a/_pages/unentdeckt/index.html
+++ b/_pages/unentdeckt/index.html
@@ -17,13 +17,13 @@ sections:
     title: Insel Symi
 
   - id: two
-    title: Lake Vouliagmeni
+    title: Inseln Paxos & Antipaxos
 
   - id: three
-    title: Váthia
+    title: Lake Vouliagmeni
 
   - id: four
-    title: Inseln Paxos & Antipaxos
+    title: Váthia
 
   - id: five
     title: Dorf Mikro Papigo
@@ -31,10 +31,9 @@ sections:
 ---
 
 
-
-<div class=" vpad--xl " >
+<div class=" vpad--xxl bv-parallax bv-shadow-inset" style="background-image: url('{{site.img}}/content/{{page.id}}/bg-intro.jpg');">
   <div class="container">
-    <div class="width width--xl text--center text--xxl">
+    <div class="width width--xl text--center text--normal text--xxl text--white" >
       <p>{{page.intro}}</p>
     </div>
   </div>
