--- a/_pages/genuss/index.html
+++ b/_pages/genuss/index.html
@@ -32,7 +32,8 @@ sections:
 
 
 
-<div class=" vpad--xxxl bv-parallax bv-shadow-inset" style="background-image: url('{{site.img}}/content/{{page.id}}/bg-intro.jpg');">
+
+<div class=" vpad--xxl bv-parallax bv-shadow-inset" style="background-image: url('{{site.img}}/content/{{page.id}}/bg-intro.jpg');">
   <div class="container">
     <div class="width width--xl text--center text--normal text--xxl text--white" >
       <p>{{page.intro}}</p>
