--- a/_pages/unentdeckt/index.html
+++ b/_pages/unentdeckt/index.html
@@ -21,10 +21,10 @@ sections:
     title: Inseln Paxos & Antipaxos
 
   - id: three
-    title: Lake Vouliagmeni
+    title: Vouliagmeni-See
 
   - id: four
-    title: Váthia
+    title: Vathia
 
   - id: five
     title: Dorf Mikro Papigo
