--- a/_pages/straende/index.html
+++ b/_pages/straende/index.html
@@ -2,10 +2,11 @@
 layout: default
 id: straende
 content-pages: true
-title: Strände & Aktitiväten
-intro: "In Sachen Strandauswahl kann keine andere europäische Urlaubsdestination dem paradiesischen Portfolio Griechenlands das Wasser reichen. Von feinstem Puderzuckersand über von Felstunneln eingerahmte Buchten für Verliebte bis hin zum karminroten Vulkanstrand erwartet Sie eine nahezu endlose Auswahl. Wer die Segel hisst und sich wie Odysseus treiben lässt, wird zwischen artenreichen Archipelen und imposanten Steilküsten auf faszinierende Tauchreviere stoßen. Landratten lassen sich bei einer Partie Golf vom maritimem Weitblick beflügeln."
+title: Strände & Aktivitäten
+intro: "In Sachen Strandauswahl kann keine andere europäische Urlaubsdestination dem paradiesischen Portfolio Griechenlands das Wasser reichen. Von feinstem Puderzuckersand über von Felstunneln eingerahmte Buchten für Verliebte bis hin zum karminroten Vulkanstrand erwartet Sie eine nahezu endlose Auswahl. Wer die Segel hisst und sich wie Odysseus treiben lässt, wird zwischen artenreichen Archipelen und imposanten Steilküsten auf faszinierende Tauchreviere stoßen. Landratten lassen sich bei einer Partie Golf vom maritimem Weitblick&nbsp;beflügeln."
 nav: true
 nav-order: 2
+
 banner:
   title: Strände &&nbsp;Aktivitäten
   title-sub: Beachlife und maritimer Weitblick von Aliki bis&nbsp;Zakynthos
